// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// $title: mesos Env
// $description: Adapter that extracts information from a mesos environment.
// $location: https://istio.io/docs/reference/config/policy-and-telemetry/adapters/mesosenv.html
// $aliases:
// $  - /docs/reference/config/adapters/mesosenv.html

// The `mesosenv` adapter extracts information from a mesos environment
// and produces attribtes that can be used in downstream adapters.
//
// This adapter supports the [mesosenv template].
package adapter.mesosenv.config;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package="config";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;

// Configuration parameters for the mesos adapter. These params
// control the manner in which the mesos adapter discovers and
// generates values related to mesos task and pod information.
//
// The adapter works by looking up pod information by UIDs (of the
// form: "mesos://pod.namespace"). It expects that the UIDs will be
// supplied in an input map for three distinct traffic classes (source,
// destination, and origin).
//
// For all valid UIDs supplied, this adapter generates output
// values containing information about the related pods.
message Params {
    // Marathon API address
    // Default: "http://master.mesos:8080"
    string marathon_address = 1;

    // HTTPBasicAuthUser for the Marathon
    string http_basic_auth_user = 2;

    // HTTPBasicPassword for the Marathon
    string http_basic_auth_password = 3;

    // Controls the resync period of the mesos cluster info cache.
    // The cache will watch for events and every so often completely resync.
    // This controls how frequently the complete resync occurs.
    //
    // Default: 5 minutes
    google.protobuf.Duration cache_refresh_duration = 4 [(gogoproto.nullable)=false,(gogoproto.stdduration) = true];
}
